<resources>
    <string name="app_name">Assignment-05</string>
    <string name="name">Navn:</string>
    <string name="name_hint">Ditt navn…</string>
    <string name="card_number">Kortnummer:</string>
    <string name="card_number_hint">Ditt kortnummer…</string>
    <string name="submit_info">Send Info!</string>
    <string name="empty_fields_error">Vennligst fyll begge feltene</string>
    <string name="your_guess_hint">Ditt tall…</string>
    <string name="your_guess">Tall:</string>
    <string name="submit_guess">Send Tall!</string>
    <string name="invalid_info">Du må sende info først!</string>
    <string name="exceeded_guesses">Du har brukt opp dine 3 forsøk, vennligst send ny info!</string>
    <string name="wrong_guess_format">Vennligst skriv inn et tall mellom 1–10</string>
</resources>