<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginTop="10sp"
            android:hint="@string/name_hint"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/grey_light"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/card_number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/card_number"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginTop="10sp"
            android:hint="@string/card_number_hint"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/grey_light"
            />

        <Button
            android:id="@+id/submit_info_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_info"
            android:layout_marginTop="20sp"
            style="@style/OrangeButton"
            android:background="@drawable/button_selector"
            />

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:textAlignment="center"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/your_guess"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/number_guess"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginTop="10sp"
            android:hint="@string/your_guess_hint"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/grey_light"
            />

        <Button
            android:id="@+id/submit_guess_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_guess"
            android:layout_marginTop="20sp"
            style="@style/OrangeButton"
            android:background="@drawable/button_selector"
            />


    </LinearLayout>
</ScrollView>